Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-<p>Bernard Abduba</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Bernard Abduba - Audible playlist</title>
+	</head>
+	<body>
+		<header>
+			<h1>My current Audible tech books playlist</h1>
+			<p>A few books I selected that deal mostly with DevOps </p>
+			<nav>
+				<ul>
+					<li><a href="#scrum">Scrum: The Art of Doing Twice the Work in Half the Time</a></li>
+					<li><a href="#the phoenix project">The Phoenix Project</a></li>
+					<li><a href="#beyond the phoenix project">Beyond the Phoenix Project</a></li>
+				</ul>
+			</nav>
+		</header>
+		
+		<main>
+			<article>
+				<section>
+					<h2 id="scrum">Scrum: The Art of Doing Twice the Work in Half the Time</h2>
+					<figure>
+						<img src="./images/scrum.jpg" alt="Scrum: The Art of Doing Twice the Work in Half the Time"/>
+						<figcaption>
+							Scrum: The Art of Doing Twice the Work in Half the Time.
+						<figcaption>
+					</figure>
+					<p>
+					If you want a book about the benefits of using scrum without going into the details of how to scrum, this is the book for you.
+					The author takes you through a journey of failed waterfall methodoligies and how scrum can overcome those shortfalls of the same.
+					I really enjoyed listening to this book especially as our team transitioned to using scrum and I needed a solid introduction of scrum.
+					</p>
+				</section>
+				
+				<section>
+					<h2 id="the phoenix project">The Phoenix Project</h2>
+					<h3>A Novel about IT, DevOps, and Helping Your Business Win</h3>
+					<h4>By: Gene Kim, Kevin Behr, George Spafford</h4>
+					<figure>
+						<img src="./images/thePhoenixProject.jpg" alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win"/>
+						<figcaption>
+							The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win.
+						<figcaption>
+					</figure>
+					<p>
+					The Phoenix Project was very relatable to me coming from a System Administration background and having gone
+					through multiple legacy system swaps and the chaos of go-lives.  The book introduced agile concepts, use of Kanban boards,
+					and other strategies to streamline processes in an IT departments by creating processes that identify types of work and complete them efficiently.
+					</p>
+				</section>
+				
+				<section>
+					<h2 id="beyond the phoenix project">Beyond the Phoenix Project</h2>
+					<h3>The Origins and Evolution of DevOps</h3>
+					<h4>By: Gene Kim, John Willis</h4>
+					<figure>
+						<img src="./images/beyondthePhoenixProject.jpg"alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win"/>
+						<figcaption>
+							Beyond the Phoenix Project.
+						<figcaption>
+					</figure>
+					<p>
+					I did enjoy the Phoenix Project and when I saw Beyond the Phoenix Project, I couldn't resist but to listen to it. 
+					The format is a conversation that takes you through the journey of DevOps, and along the way, you pick up concepts and 
+					names of industry leaders who pioneered some of the ground work in DevOps.  As you listen to this conversation, you will 
+					find yourself adding more books to read about some of the concepts.  Great book if you want more knowledge into DevOps.
+					</p>
+				</section>
+			</article>
+		</main>
+		<footer>
+			<p>&copy; 2020 Bernard Abduba</p>
+		</footer>
+	</body>
+</html>
