Adding CSS styling

--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 	<head>
 		<title>Bernard Abduba - Audible playlist</title>
 	</head>
+	<link rel="stylesheet" href="styles.css"</link>
 	<body>
 		<header>
 			<h1>My current Audible tech books playlist</h1>
-			<p>A few books I selected that deal mostly with DevOps </p>
-			<nav>
+			<div class="toc">
 				<ul>
 					<li><a href="#scrum">Scrum: The Art of Doing Twice the Work in Half the Time</a></li>
 					<li><a href="#the phoenix project">The Phoenix Project</a></li>
 					<li><a href="#beyond the phoenix project">Beyond the Phoenix Project</a></li>
 				</ul>
-			</nav>
+			</div>
 		</header>
 		
 		<main>
 			<article>
 				<section>
-					<h2 id="scrum">Scrum: The Art of Doing Twice the Work in Half the Time</h2>
+					<h2 id="scrum">Scrum</h2>
+					<h3> The Art of Doing Twice the Work in Half the Time </h3>
+					<h4 id="author"> By: Jeff Sutherland, J.J. Sutherland</h4>
 					<figure>
 						<img src="./images/scrum.jpg" alt="Scrum: The Art of Doing Twice the Work in Half the Time"/>
 						<figcaption>
-							Scrum: The Art of Doing Twice the Work in Half the Time.
+							<a href="https://www.audible.com/pd/Scrum-Audiobook/B00NJ3WS9G?" title="Image Credit: Audible">Scrum: The Art of Doing Twice the Work in Half the Time</a>
 						<figcaption>
 					</figure>
 					<p>
@@ -36,11 +38,11 @@
 				<section>
 					<h2 id="the phoenix project">The Phoenix Project</h2>
 					<h3>A Novel about IT, DevOps, and Helping Your Business Win</h3>
-					<h4>By: Gene Kim, Kevin Behr, George Spafford</h4>
+					<h4 id="author">By: Gene Kim, Kevin Behr, George Spafford</h4>
 					<figure>
 						<img src="./images/thePhoenixProject.jpg" alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win"/>
 						<figcaption>
-							The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win.
+							<a href="https://www.audible.com/pd/The-Phoenix-Project-Audiobook/B00VAZZY32?" title="Image Credit: Audible">The Phoenix Project: A Novel About IT, DevOps...</a>
 						<figcaption>
 					</figure>
 					<p>
@@ -53,11 +55,11 @@
 				<section>
 					<h2 id="beyond the phoenix project">Beyond the Phoenix Project</h2>
 					<h3>The Origins and Evolution of DevOps</h3>
-					<h4>By: Gene Kim, John Willis</h4>
+					<h4 id="author">By: Gene Kim, John Willis</h4>
 					<figure>
-						<img src="./images/beyondthePhoenixProject.jpg"alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win"/>
+						<img src="./images/beyondthePhoenixProject.jpg" alt="Beyond the Phoenix Project"/>
 						<figcaption>
-							Beyond the Phoenix Project.
+							<a href="https://www.audible.com/pd/Beyond-the-Phoenix-Project-Audiobook/B07B79MJPZ?" title="Image Credit: Audible">Beyond the Phoenix Project</a>
 						<figcaption>
 					</figure>
 					<p>
