Updated html figcaption

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<img src="./images/scrum.jpg" alt="Scrum: The Art of Doing Twice the Work in Half the Time"/>
 						<figcaption>
 							<a href="https://www.audible.com/pd/Scrum-Audiobook/B00NJ3WS9G?" title="Image Credit: Audible">Scrum: The Art of Doing Twice the Work in Half the Time</a>
-						<figcaption>
+						</figcaption>
 					</figure>
 					<p>
 					If you want a book about the benefits of using scrum without going into the details of how to scrum, this is the book for you.
@@ -43,7 +43,7 @@
 						<img src="./images/thePhoenixProject.jpg" alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win"/>
 						<figcaption>
 							<a href="https://www.audible.com/pd/The-Phoenix-Project-Audiobook/B00VAZZY32?" title="Image Credit: Audible">The Phoenix Project: A Novel About IT, DevOps...</a>
-						<figcaption>
+						</figcaption>
 					</figure>
 					<p>
 					The Phoenix Project was very relatable to me coming from a System Administration background and having gone
@@ -60,7 +60,7 @@
 						<img src="./images/beyondthePhoenixProject.jpg" alt="Beyond the Phoenix Project"/>
 						<figcaption>
 							<a href="https://www.audible.com/pd/Beyond-the-Phoenix-Project-Audiobook/B07B79MJPZ?" title="Image Credit: Audible">Beyond the Phoenix Project</a>
-						<figcaption>
+						</figcaption>
 					</figure>
 					<p>
 					I did enjoy the Phoenix Project and when I saw Beyond the Phoenix Project, I couldn't resist but to listen to it. 
